<resources>
    <string name="app_name">健康付</string>
    <string name="title_qrCode">二维码</string>
    <string name="title_nfc">NFC</string>
    <string name="title_service">服务</string>
    <string name="title_my">我</string>
    <string name="phone_number_constant">手机号</string>
    <string name="captcha_constant">验证码</string>
    <string name="avatar">头像</string>
    <string name="phone_input_hint">请输入手机号码</string>
    <string name="captcha_input_hint">请填写验证码</string>
    <string name="get_captcha">获取验证码</string>
    <string name="login">登录</string>
    <string name="freeze_constant">紧急冻结</string>
    <string name="band">绑定</string>
    <string name="id_input_hint">请输入身份证号</string>
    <string name="name_input_hint">请填写姓名</string>
    <string name="cookie_preference_file">CookiePrefsFile</string>
    <string name="error_invalid_captcha">请输入正确的验证码</string>
    <string name="error_field_required">请输入手机号</string>
    <string name="error_invalid_phone">请输入正确手机号</string>
    <string name="NFCPayTipString">正在模拟支付，请靠近扫描点</string>
    <string name="payMethodTipString">优先使用此方式支付</string>
    <string name="nfc_pay">付款</string>
    <string name="nfc_transport">乘车码</string>
    <string name="swipe_card_hint">请将公交卡放入手机NFC感应区</string>
</resources>